examples/test/testpolicy13331.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13331
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key21: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value49
          key27: value45
      podSelector:
        matchLabels:
          key19: value41
          key34: value23
